--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>This is the background generator</h1>
   <input  oninput="gradient()" type="color" class="color1" name="color1" value="#00ff01">
   <input  oninput="gradient()" type="color" class="color2" name="color2" value="#ff0000">
-  <h2>The current Css background</h2>
+  <h2>See how cool this one is!!!</h2>
   <h3></h3>
 
 
