--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/BackgroundGenerator/index.css">
 </head>
 <body id="body">
-  <h1>This is the background generator</h1>
+  <h1>This is the background generator and it is cool</h1>
   <input  oninput="gradient()" type="color" class="color1" name="color1" value="#00ff01">
   <input  oninput="gradient()" type="color" class="color2" name="color2" value="#ff0000">
   <h2>See how cool this one is!!!</h2>
